# CO2-REST-API-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
co2_emissions_api/api/: backend.py  main.py
data/: CO2-emissions.csv
